# OpenSilcky

./: .gitignore  404.html  CLAUDE.md  CNAME  Cargo.toml  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/slicky-cli/: Cargo.toml
crates/slicky-core/: Cargo.toml
crates/slicky-daemon/: Cargo.toml
crates/slicky-ffi/: Cargo.toml
crates/statuslight-daemon/: Cargo.toml
crates/statuslight-ffi/: build.rs  cbindgen.toml
development/architecture/: index.html
development/contributing/: index.html
docs/: index.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/plans/: 001-full-stack-scaffold.md  002-ci-cd-setup.md  003-github-pages.md  004-dmg-release.md  005-ux-overhaul.md  006-app-bundle.md  007-swiftui-gui.md  008-animations-customization.md  009-dual-ui-cli-completeness.md  014-slack-integration-overhaul.md  015-streamlined-slack-setup.md  016-auto-update-install.md  017-bidirectional-slack-sync.md  020-multi-device-drivers-brightness.md  024-fix-app-freeze.md
docs/reference/: cli.md  daemon-api.md  ffi.md  protocol.md  supported-devices.md
docs/slack-setup/: index.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
macos/: Info.plist.template
macos/OpenSlicky/: OpenSlickyApp.swift  SlickyCLI.swift
references/: README.md
scripts/: build-app.sh  generate-icon.swift  uninstall.applescript  uninstall.sh
search/: search_index.json
slack-setup/: index.html  manifest.json
(+71 files in other folders)
